@@ -55,7 +55,7 @@
 #       Simon J. Gerraty <sjg@crufty.net>
 
 # RCSid:
-#	$Id: install-mk,v 1.117 2015/11/14 18:09:57 sjg Exp $
+#	$Id: install-mk,v 1.118 2015/12/16 01:57:06 sjg Exp $
 #
 #	@(#) Copyright (c) 1994 Simon J. Gerraty
 #
@@ -70,7 +70,7 @@
 #	sjg@crufty.net
 #
 
-MK_VERSION=20151111
+MK_VERSION=20151212
 OWNER=
 GROUP=
 MODE=444
